Changing the first activity after the login to be the main activity adding strings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,12 @@
     <string name="login_button_label">Login</string>
     <string name="title_section1">I Blocked</string>
     <string name="title_section2">I Was Blocked!</string>
+    <string name="find_a_car">Find a Car</string>
+    <string name="call">Call</string>
+    <string name="un_block">Un Block</string>
+    <string name="you_blocked_message">You are blocked by</string>
+    <string name="you_blocking_message">You are blocking</string>
+    <string name="no_updates">No Updates</string>
 
     <string-array name="Blockedarrays">
         <item>Blocked</item>
