Completing the basic functionality of the MainActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="you_blocked_message">You are blocked by</string>
     <string name="you_blocking_message">You are blocking</string>
     <string name="no_updates">No Updates</string>
+    <string name="empty"></string>
 
     <string-array name="Blockedarrays">
         <item>Blocked</item>
