After updating Sagi changes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
     <string name="un_block">UnBlock</string>
     <string name="you_blocked_message">You are blocked by</string>
     <string name="you_blocking_message">You are blocking</string>
-    <string name="no_updates">No Updates</string>
+    <string name="no_updates">You are Free!</string>
     <string name="empty"></string>
 
     <string-array name="Blockedarrays">
